# evse_pcb_test_main-main

./: README.md
components/: CMakeLists.txt
components/inc/: EnergyMeter.h  GFCI.h  MCP23008.h  RFID_READ.h  Relay.h  evse_4g_modem.h  evse_websocket.h  example_common_private.h  lcd20x4.h  led_strip.h  led_strip_encoder.h  protocol_examples_common.h
components/src/: EnergyMeter.c  GFCI.c  MCP23008.c  RFID_READ.c  Relay.c  check_connection.c  connect.c  eth_connect.c  evse_4g_modem.c  evse_websocket.c  lcd20x4.c  led_strip.c  ppp_connect.c  wifi_connect.c
components/src/rc522/: rc522_i2c.c  rc522_mifare.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
