idf_component_register(SRCS 
                            "src/wifi_connect.c"
                            "src/eth_connect.c"
                            "src/ppp_connect.c"
                            "src/connect.c"
                            "src/check_connection.c"
                            "src/esp_websocket_client.c"
                            "src/evse_websocket.c"
                            "src/EnergyMeter.c"
                            "src/lcd20x4.c"
                            "src/Relay.c"
                            "src/led_strip_encoder.c"
                            "src/led_strip.c"
                            "src/MCP23008.c"
                            "src/RFID_READ.c"
                            "src/rc522/rc522.c"
                            "src/rc522/rc522_driver.c"
                            "src/rc522/rc522_pcd.c"
                            "src/rc522/rc522_picc.c"
                            "src/rc522/rc522_mifare.c"
                            "src/rc522/rc522_spi.c"
                            "src/rc522/rc522_i2c.c"
                            "src/rc522/rc522_helpers.c"
                            "src/GFCI.c"
                            "src/evse_4g_modem.c"
                        
                    INCLUDE_DIRS "."
                    "inc"
                    "inc/rc522"
                    "src"
                    "src/rc522"

                    REQUIRES
                    "esp_netif"
                    "esp_system"
                    "esp_wifi"
                    "esp_event"
                    "nvs_flash"
                    "esp_eth"
                    "esp_driver_gpio"
                    "esp_driver_uart"
                    "mbedtls"
                    "wpa_supplicant"
                    "tcp_transport"
                    "http_parser"
                    "json"
                    "driver"
)
